Gestion de usuarios realizada

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
     <link rel="stylesheet" href="{% static 'css/loading.css' %}">
     <link rel="stylesheet" href="{% static 'css/delete.css' %}">
+    <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
 
     <!-- Agregar extras a la base -->
     {% block extra_head %}{% endblock %}
