--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -1,5 +1,13 @@
+{% load static %}
 <!-- Sidebar -->
 <aside id="sidebar" class="fixed top-16 bottom-0 left-0 w-72 bg-gradient-to-b from-primary-900 to-primary-800 border-r border-primary-700 flex flex-col transform -translate-x-full transition-transform duration-300 z-40 text-white shadow-xl">
+  
+  <!-- Logo -->
+  <div class="flex justify-center items-center py-6 bg-black border-b border-primary-700/30">
+    <div class="w-56 h-auto px-2">
+      <img src="{% static 'img/logo_principal.png' %}" alt="PET FACE ID" class="w-full h-auto object-contain" >
+    </div>
+  </div>
   
   <!-- Profile signout -->
   <div class="p-4 border-t border-primary-700/50 mt-auto">
@@ -28,14 +36,14 @@
   </div>
 
   <!-- Navegación principal -->
-  <nav class="flex-1 px-4 py-1 overflow-y-auto">
+  <nav class="flex-1 px-4 pt-4 pb-1 overflow-y-auto">
     
     <div class="sidebar-menu custom-scrollbar space-y-1">
         <!-- Título sección -->
-        <h3 class="text-xs font-semibold text-primary-300 uppercase tracking-wider px-3 mt-6 mb-3">Navegación</h3>
+        <h3 class="text-xs font-semibold text-primary-300 uppercase tracking-wider px-3 mb-3">Navegación</h3>
         
         <!-- Dashboard -->
-        <a href="#" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
+        <a href="{% url 'auth:Dashboard' %}" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
             <i class="fas fa-tachometer-alt text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
             <span>Dashboard</span>
         </a> 
@@ -44,6 +52,18 @@
         <a href="{% url 'auth:paleta' %}" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
             <i class="fas fa-palette text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
             <span>Paleta colores</span>
+        </a> 
+
+        <!-- Paleta Colores -->
+        <a href="{% url 'auth:users_list' %}" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
+            <i class="fas fa-user text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
+            <span>Gestion de usuarios</span>
+        </a> 
+
+        <!-- Paleta Colores -->
+        <a href="#" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
+            <i class="fas fa-dog text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
+            <span>Mi Mascota</span>
         </a> 
 
     </div>
