--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -54,17 +54,21 @@
             <span>Paleta colores</span>
         </a> 
 
-        <!-- Paleta Colores -->
+        <!-- Gestion de usuarios -->
+        {% if request.user.role == 'VET' or request.user.role == 'ADMIN' %}
         <a href="{% url 'auth:users_list' %}" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
             <i class="fas fa-user text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
             <span>Gestion de usuarios</span>
         </a> 
+        {% endif %}
 
-        <!-- Paleta Colores -->
-        <a href="#" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
+        <!-- Mi mascota -->
+        {% if request.user.role == 'OWNER' or request.user.role == 'ADMIN' %}
+        <a href="{% url 'mascota:main_register' %}" class="flex items-center gap-2 px-3 py-2.5 rounded-lg text-white hover:bg-primary-700 hover:text-secondary-300 transition-all duration-200 group">
             <i class="fas fa-dog text-primary-300 group-hover:text-secondary-300 transition-colors"></i>
             <span>Mi Mascota</span>
-        </a> 
+        </a>
+        {% endif %}
 
     </div>
   </nav>
