--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,6 +8,9 @@
 
     <!-- Para visualizar los icono de font Awesome (fas fa) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    
+    <!-- SweetAlert2 para modales elegantes -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Iconos de las pestañas del navegador -->
     <link rel="icon" href="{% static 'icons/favicon.ico' %}">
