--- a/templates/generic/list_mixin.html
+++ b/templates/generic/list_mixin.html
@@ -8,7 +8,7 @@
 
     <h1 class="text-2xl font-bold text-gray-800">{{ title }}</h1>
     
-    <!-- Prueba de breadcrumbs o migas de pan, se pasa la info desde la vista como contexto -->
+    <!-- breadcrumbs o migas de pan, se pasa la info desde la vista como contexto -->
     {% include "components/breadcrumbs.html" with breadcrumbs=breadcrumb_list %}
     
     <!-- Cabecera con título y botones de acción -->
